test/spec_vectors/global/fail/module_35.wat
(module (import "spectest" "global_i32" (global i32)) (func (i32.const 0) (global.set 1)))